--- a/nestle-site/package.json
+++ b/nestle-site/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.14",
+    "styled-components": "^5.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
